tests/paczka1/small_fuzzy/57207361.err
Error in line 1: pc1tk7G3 A848 84,4
Error in line 10: IPp6 S511 45,9
